src/test/deca/context/invalid/SansObjet/DeclVar-Plus-string-float-float.deca
// Description:
//    Declaration of a string variable using + operation between a float variable and float .
// 
// Results:
//     Contextual error
//     Line 14: (RULE 3.28) Incompatible type assignment
// 
// Historique: 
//    cree le 11/01/2022 

{
    float x =  10.01; 
    float y = 3.14; 
    string z = x + y ; 
}
